--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1",
     "socket.io": "^4.6.1",
     "ytdl-core": "^4.9.1"
   }
