messages self update first then broadcast, pfp and username update fixed

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /listen2gether-client/node_modules
 /listen2gether-client/.angular
 /listen2gether-client/.env
+/listen2gether-client/src/host-config.ts
 /Backend/node_modules
 /Backend/db
 /Backend/.env
@@ -45,6 +46,3 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
-
-
-./src/host-config.ts
